# Fisca

./: LICENSE  README.md  README.ru.md  main.py  pyproject.toml
app/core/: config.py  database.py  logger.py
app/enums/: __init__.py  account_type.py  transaction_type.py
app/models/: __init__.py  account.py  base.py  category.py  currency.py  saving.py  transaction.py  user.py
app/utils/: strings.py
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8df3ba111b4c_create_tables.py  eebaff04bd2a_add_transaction_type_and_is_global_to_.py
backend/app/api/v1/: __init__.py  categories.py  currencies.py  savings.py  transactions.py  users.py
backend/app/core/: config.py  logger.py
backend/app/database/: __init__.py  session.py  utils.py
backend/app/enums/: __init__.py  transaction_type.py
backend/app/exceptions/: category.py  currency.py  saving.py  transaction.py  user.py
backend/app/models/: __init__.py  base.py  category.py  currency.py  saving.py  transaction.py  user.py
backend/app/repositories/: __init__.py  base_repo.py  category_repo.py  currency_repo.py  saving_repo.py  transaction_repo.py  user_repo.py
backend/app/schemas/: category.py  currency.py  saving.py  transaction.py  user.py
backend/app/services/: __init__.py  category_service.py  currency_service.py  saving_service.py  transaction_service.py  user_service.py
backend/app/utils/: pluralize.py
telegram/: README.md  bot.py  config.py  pyproject.toml
tests/: conftest.py  test_account_model.py  test_config.py  test_util_strings.py
(+44 files in other folders)
