[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
